fix: overflow hidden to keep zoom in container

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -303,6 +303,7 @@ video {
   cursor: pointer;
   text-decoration: none;
   color: black;
+  overflow: hidden;
 }
 
 .categoryGridArea img{
